--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aws-sdk": "^2.1686.0",
     "axios": "^1.7.4",
+    "crypto": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "pusher": "^5.2.0",
