--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,13 @@
 {
-    "rewrites":  [
-        {   
-            "source": "/(.*)", 
-            "destination": "/"
+    "routes": [
+        {
+            "src": "/api/(.*)",
+            "dest": "/api/$1"
+        },
+        { 
+            "src": "/[^.]+", 
+            "dest": "/", 
+            "status": 200 
         }
     ]
 }
