--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.4",
     "crypto": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.0",
     "mongoose": "^8.6.0",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
