--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.1686.0",
     "axios": "^1.7.4",
     "crypto": "^1.0.1",
+    "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
     "mongoose": "^8.6.0",
