--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aws-sdk": "^2.1686.0",
     "axios": "^1.7.4",
+    "bcrypt": "^5.1.1",
     "crypto": "^1.0.1",
     "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
