--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "aws-sdk": "^2.1686.0",
     "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
