--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.1686.0",
     "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
+    "crypto-js": "^4.2.0",
     "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
